# rustBit

./: .gitignore  Cargo.toml  P%CE%D3%8A%95%D5%B3%A8%DB%AE%CC%09%EA%F3%D1%BE%E9%21L.  README.md  foo.txt  tracker_list.txt
.github/workflows/: rust-clippy.yml
migrations/: 20230129160528_tracker.sql
src/: integration_test.rs  main  main.rs
src/actors/: connection.rs  messages.rs  mod.rs  torrent.rs  tracker.rs  trackersInterface.rs  trackers_interface.rs  writer.rs
src/bencode/: decode.rs  encode.rs  metainfo.rs  mod.rs
src/bridge/: monitor.rs
src/common/: file.rs  generator.rs  mock_stream.rs  mod.rs  thread_pool.rs
src/messages/: bitfield.rs  extension.rs  handshake.rs  interested.rs  mod.rs  request.rs
src/peer/: buffer.rs  handshake.rs  manager.rs  mod.rs  peer_manager.rs  peer_stream.rs  piece_pool.rs  stream.rs
src/peer/download/: block.rs  info.rs  mod.rs
src/torrent/: file.rs  info.rs  magnet.rs  manager.rs  mod.rs  torrent.rs  writer.rs
src/torrent/test_data/: fake_debian.torrent  fake_prey.torrent
src/tracker/: manager.rs  mod.rs  peer_endpoint.rs  tcp_tracker.rs  tracked_peer.rs  tracker.rs  udp_tracker.rs
torrent_files/: megnet_try.magnet
