[package]
name = "rust_bencode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha-1 = "0.10.0"
ureq = "2.4.0"
urlencoding = "2.1.0"
rand = "0.8.5"
base32 = "0.4.0"
actix-web = "4"
rayon = "1.5"
mock-io = "0.3.2"
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres" ] }

[build-dependencies]
tonic-build = "0.8"

[profile.bench]
debug = true
