[package]
name = "rust_bencode"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
anyhow = "1"
async-trait = "0.1"
base32 = "0.4.0"

chrono = "0.4"
env_logger = "0.10.0"
futures = "0.3"
log = "0.4.17"
mock-io = "0.3.2"
rand = "0.8.5"
rayon = "1.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sha-1 = "0.10.0"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "chrono", "json" ] }
thiserror = "1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
ureq = "2.4.0"
url = "2.3.1"
urlencoding = "2.1.0"

[dev-dependencies]
httpmock = "0.6"

[profile.bench]
debug = true
